# solver.fastmech

./: .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CTestBuild.cmake  CalcCondMod.F90  CsedMod-new06_27_10_DTsusp_DT.for  CsedMod.f90  CsedMod.for  CsedMod_DT.f90  CsedMod_DT.for  Einit.f90  Fastmech.sln  Fastmech.u2d  Fastmech.vfproj  Fastmech_iRIC.sln  Fastmech_iRIC.u2d  GeometryMod.F90  GridCondMod.F90  GridCoordMod.F90  Median.f90  ReadCGNS.F90  RivCalcInitCond.F90  RivRoughnessMod.F90  RivStagrMod_jmn.F90  RivVarMod.f90  RivVarMod.for  RivVarTimeMod.f90  RivVarVertMod.f90  RivVarWMod.f90  RivVertMod2.f90  Stagr_Console.f90  Uinit.f90  Uinit.for  Welcome.f90  WriteCGNS.F90  definition-mi.xml  definition.xml  falveld.F90  iriclibf.f90  (+2 more)
.github/workflows/: build.yml  install_qt_fast_windows.ps1  install_qt_module.ps1
.svn/: wc.db
ConflictingInstancesTest/: ConflictingInstancesTest.u2d  ConflictingInstancesTest.vfproj
Daniele Tonina/: betaCDFandINV.f90  betaCDFandINV.for  betavol.f90  elevdt.90  elevdt.f90  functionrough.f90  functionrough.for  initHdt.f90  initHdt.for  initdt.f90  initimeta.f90  left.html  right.html  rough.f90  roughnessinv.f90  volfrac.f90
GetValuesTest/: Case1.cgn  GetValuesTest.u2d  GetValuesTest.vfproj
Jim1D Code/: ParmSet.f90  StbBkwOutput.f90  StpBkwInput.f90  Support.f90  Supportold.f90  xAnlzFlow.f90  xFArea.f90  xFArea2.f90  xFChPreis.f90  xFInput.f90  xFMatInv.f90  xFNetInitConds.f90  xFNetPreisMain.f90  xFlowSupport.F90
My Inspector XE Results - Fastmech_iRIC/r000sc/: r000sc.inspxe
My Inspector XE Results - Fastmech_iRIC/r000sc/data.0/: r000sc.pdr
OldCode/: CalcCondMod.F90  CsedMod-new04_12_DT.for  CsedMod-new20121024_DTsusp_DT.for  CsedMod-new20121024_DTsusp_DT2.for  CsedMod.f90  Einit.f90  GeometryMod_old.F90  GridCoordMod2.F90  RivCGNSInptMod.f90  RivCGNSInptSubRtMod2.f90  RivCGNSOutptMod.f90  RivCGNSOutptSubRtMod.f90  RivCalcInitCond.F90  RivRoughnessMod2.F90  RivStagrMod_jmn.F90  RivVarMod.f90  RivVarVertMod.f90  RivVertMod.f90  TSplineMod.for  Uinit.f90  Vert.for  fm_helpers.f90  iriclibf.f90  stressDivMod.f90
OldCode/Daniele Tonina/: Variables.doc  initHdt.f90  roughnessinv.f90
OldCode/Jim1D Code/: ParmSet.f90  StpBkwInput.f90  readHDF5.f90  readNetCDF.f90  readNetCDFold.f90  writeHDF5.f90  writeNetCDF.f90  xAnlzFlow.f90  xFMatInv.f90  xFNetPreisMain.f90
OldLibs/libs_old/: cgnsBuild.defs
Test/: Case1.cgn  Fastmech_Test.py  input.ini  seddat  t1.txt  top2
Test/New folder/: consoleLog.txt
Test/Tutorial_2_Test/: consoleLog.txt  project.xml
Test/Tutorial_5_Test/: Case1.cgn  consoleLog.txt  project.xml  seddat  top2
Test/Tutorial_6_A_Test/: project.xml
Test/Tutorial_6_A_Test/fastmech/iRICZone/: gridcreate.cgn
Test/test/: project.xml
TestBMI/: Case2.cgn  Case2_1.cgn  Case2a.cgn  Test1.cgn  Test2.cgn
TestBMI/Test1/: Case1.cgn  consoleLog.txt  project.xml
TestBMI/Test1/fastmech/iRICZone/: gridcreate.cgn
TestBMI/Test2/: Case1.cgn  consoleLog.txt  project.xml
TestBMI/Test2/fastmech/iRICZone/: gridcreate.cgn
TestBMI/Test2_1/: Case1.cgn  consoleLog.txt  project.xml
TestBMI/Test2a/: consoleLog.txt  project.xml
TestBMI/Test2a/fastmech/iRICZone/: gridcreate.cgn
TestFortran/: CMakeLists.txt  GetValueTest.f90  conflicting_instances_test.f90  info_test.f90  irf_test.f90  set_value_test.f90  testing_helpers.f90  vargrid_test.f90
_build/: .gitignore  CMakeCache.txt  Makefile  calccond.mod  cmake_install.cmake  csedmod.mod  csedmod_dt_susp.mod  einitmod.mod  gridcond.mod  gridcoord.mod  iriclibf.mod  median.mod  netpreismain.mod  readcgns.mod  rivconnectivitymod.mod  rivstagr4mod_jmn.mod  rivvarmod.mod  rivvartimemod.mod  rivvarvertmod.mod  rivvarwmod.mod  rivvertmod.mod  stpbckinputmod.mod  stpbckoutputmod.mod  support.mod  tridiag.mod  uinitmod.mod  writecgns.mod
fmbmi/: fmbmi.u2d  fmbmi.vfproj
info_test/: info_test.vfproj
irf_test/: irf_test.vfproj
libs/: cgnslib-3.2.1.7z  cgnstypes.h  hdf5-1.8.14.7z  iriclib-139cd84.7z
libs_06_07_18/: iricmi.lib  iricmi_f.lib
set_value_test/: set_value_test.vfproj
src/: CalcCondMod.F90  CalcCondMod2.F90  CsedMod.f90  CsedMod2.f90  CsedMod_DT.f90  Einit.f90  Einit2.f90  GeometryMod.F90  GridCondMod.F90  GridCondMod2.F90  GridCoordMod.F90  Median.f90  ParmSet.f90  ReadCGNS.F90  RivCalcInitCond.F90  RivCalcInitCond2.F90  RivConnectivityMod.F90  RivConnectivityMod2.F90  RivRoughnessMod.F90  RivStagrMod_bmi.f90  RivStagrMod_jmn.F90  RivVarMod.f90  RivVarMod2.f90  RivVarTimeMod.f90  RivVarTimeMod2.f90  RivVarVertMod.f90  RivVarVertMod2.f90  RivVarWMod2.f90  RivVertMod2.f90  Stagr_Console.f90  StbBkwOutput.f90  StpBkwInput.f90  Support.f90  Uinit.f90  Uinit2.f90  UnlinkHDF5Mod.f90  Welcome.f90  WriteCGNS.F90  WriteCGNS2.F90  betaCDFandINV.f90  (+26 more)
temp/: cgnsconfig.h
tests/: CMakeLists.txt
tests/simple/: CMakeLists.txt
tests/test1/: CMakeLists.txt  Case1.cgn.orig.sha256  test1.f90
tests/test2/: CMakeLists.txt
tests/test3/: CMakeLists.txt
tmp/: CMakeCache.txt
vargrid_test/: vargrid_test.vfproj
x64/Debug/: BuildLog.htm  Fastmech.diag  Fastmech.exe.embed.manifest.rc
x64/Fastmech_v1/: definition.xml
x64/Intel_SSA/: BuildLog.htm
x64/Release/: BuildLog.htm  Fastmech.exe.embed.manifest.rc
